fix the navbar & using new theme and log

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -57,3 +57,8 @@ $fa-font-path: "@fortawesome/fontawesome-free/webfonts";
         max-height: 70px;
     }
 }
+
+.main-sidebar {
+    background-color: #0C134F;
+    color: #fff;
+}
